Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com> Refactor adjustments table to improve clarity. Added new columns for 'Type of Adjustment', 'Before Adjustment', 'After Adjustment', and 'Adjustment Difference'. The table now accurately represents data based on type of adjustment. Closes #551.

--- a/src/main/webapp/pharmacy/pharmacy_adjustment_retail_sale_rate.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_adjustment_retail_sale_rate.xhtml
@@ -51,7 +51,9 @@
                                 <h:outputLabel value="Comment" ></h:outputLabel>
                                 <p:inputTextarea value="#{pharmacyAdjustmentController.comment}" ></p:inputTextarea>
                                 <h:outputLabel value="" ></h:outputLabel>
-                                <p:commandButton id="btnAdjust" value="Make Adjustment" ajax="false" action="#{pharmacyAdjustmentController.adjustRetailRate()}" >
+                                <p:commandButton id="btnAdjust" value="Make Adjustment" 
+                                                 ajax="false" 
+                                                 action="#{pharmacyAdjustmentController.adjustRetailRate()}" >
                                 </p:commandButton>
                                 <p:defaultCommand target="btnAdjust"/>
                             </p:panelGrid>
