Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_item.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_item.xhtml
@@ -48,7 +48,7 @@
                                          >
                                 <f:facet name="header">
                                     <h:outputLabel value="Adjustment List "/>
-                                    <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/> 
+                                    <h:outputLabel value="#{reportsTransfer.department.name}"/> 
                                     <h:panelGrid columns="4">
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
