Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/patient_search.xhtml
+++ b/src/main/webapp/emr/patient_search.xhtml
@@ -28,12 +28,12 @@
 
                                     <div class="mb-3">
                                         <h:outputLabel value="Name" class="form-label" />
-                                        <h:inputText class="form-control" value="#{patientController.searchName}" />
+                                        <p:inputText class="form-control" value="#{patientController.searchName}" />
                                     </div>
 
                                     <div class="mb-3">
                                         <h:outputLabel value="Phone Number" class="form-label" />
-                                        <h:inputText class="form-control" value="#{patientController.searchPhone}" />
+                                        <p:inputText class="form-control" value="#{patientController.searchPhone}" />
                                     </div>
 
 
